chore(api):[TRI-274] commit changes before merge with TRI-290