@@ -1,15 +1,10 @@
 package net.catenax.irs.mappers;
 
-import net.catenax.irs.dtos.Aspect;
-import net.catenax.irs.dtos.PartId;
-import net.catenax.irs.dtos.PartInfo;
-import net.catenax.irs.dtos.PartRelationship;
-import net.catenax.irs.dtos.PartRelationshipsWithInfos;
-import net.catenax.irs.entities.EntitiesMother;
-import net.catenax.irs.entities.PartAspectEntity;
-import net.catenax.irs.entities.PartAttributeEntity;
-import net.catenax.irs.entities.PartIdEntityPart;
-import net.catenax.irs.entities.PartRelationshipEntity;
+import net.catenax.irs.component.*;
+import net.catenax.irs.component.enums.AspectType;
+import net.catenax.irs.component.enums.BomLifecycle;
+import net.catenax.irs.component.enums.Direction;
+import net.catenax.irs.entities.*;
 import net.catenax.irs.testing.DtoMother;
 import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
@@ -19,7 +14,10 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -33,56 +31,53 @@ class PartRelationshipEntityListToDtoMapperTests {
 
     EntitiesMother generate = new EntitiesMother();
     DtoMother generateDto = new DtoMother();
-    @Mock
-    PartAspectEntityToDtoMapper aspectMapper;
+
     @Mock
     PartRelationshipEntityToDtoMapper relationshipMapper;
     @Mock
-    PartIdEntityPartToDtoMapper idMapper;
+    ChildItemEntityPartToDtoMapper idMapper;
     @InjectMocks
     PartRelationshipEntityListToDtoMapper sut;
 
-    PartIdEntityPart car1 = generate.partId();
-    PartIdEntityPart gearbox1 = generate.partId();
-    PartIdEntityPart gearwheel1 = generate.partId();
+    Job car1 = generate.job();
+    Job gearbox1 = generate.job();
+    Job gearwheel1 = generate.job();
+    AsyncFetchedItems asyncFetchedItems = generate.asyncFetchedItems();
+    SummaryAttributeEntity summaryEntityPart = generate.summary(asyncFetchedItems);
+    QueryParameterEntityPart queryParameterEntityPart = generate.queryParameter(BomLifecycle.AS_PLANNED, new ArrayList<AspectType>(Arrays.asList(AspectType.values())), 2, Direction.UPWARD);
     PartRelationshipEntity car1_gearbox1 = generate.partRelationship(car1, gearbox1);
     PartRelationshipEntity gearbox1_gearwheel1 = generate.partRelationship(gearbox1, gearwheel1);
-    PartAspectEntity car1_a = generate.partAspect(car1);
-    PartAspectEntity gearwheel1_a = generate.partAspect(gearwheel1);
     List<PartRelationshipEntity> relations = List.of(car1_gearbox1, gearbox1_gearwheel1);
-    List<PartIdEntityPart> partIds = List.of(car1, gearbox1, gearwheel1);
-    List<PartAspectEntity> aspects = List.of(car1_a, gearwheel1_a);
-    List<PartRelationship> relationsDto = relations.stream().map(s -> generateDto.partRelationship()).collect(Collectors.toList());
-    List<PartId> partIdsDto = partIds.stream().map(s -> generateDto.partId()).collect(Collectors.toList());
-    List<Aspect> aspectsDto = aspects.stream().map(s -> generateDto.partAspect()).collect(Collectors.toList());
-    List<PartAttributeEntity> attributes = partIds.stream().map(p -> generate.partTypeNameAttribute(p)).collect(Collectors.toList());
+    List<Job> jobEntityParts = List.of(car1, gearbox1, gearwheel1);
+    List<Relationship> relationsDto = relations.stream().map(s -> generateDto.relationship()).collect(Collectors.toList());
+    List<Job> jobsDto = jobEntityParts.stream().map(s -> generateDto.job()).collect(Collectors.toList());
+    Summary summaryDto = generateDto.summary(asyncFetchedItems);
+    QueryParameter queryParameterDto = generateDto.queryParameter(BomLifecycle.AS_PLANNED, new ArrayList<AspectType>(Arrays.asList(AspectType.values())), 2, Direction.UPWARD);
 
     @Test
     void toPartRelationshipsWithInfos() {
         // Arrange
-        attributes.remove(0); // Test case when attribute is missing
-        zip(partIds, partIdsDto)
-                .forEach(i -> lenient().when(idMapper.toPartId(i.getKey())).thenReturn(i.getValue()));
+        zip(jobEntityParts, jobsDto)
+                .forEach(i -> lenient().when(idMapper.toJob(i.getKey())).thenReturn(i.getValue()));
         zip(relations, relationsDto)
-                .forEach(i -> when(relationshipMapper.toPartRelationship(i.getKey())).thenReturn(i.getValue()));
-        zip(aspects, aspectsDto)
-                .forEach(i -> lenient().when(aspectMapper.toAspect(i.getKey())).thenReturn(i.getValue()));
+                .forEach(i -> when(relationshipMapper.toRelationship(i.getKey())).thenReturn(i.getValue()));
 
         // Act
-        var output = sut.toPartRelationshipsWithInfos(relations, partIds, attributes, aspects);
+        var output = sut.toPartRelationshipsWithInfos(relations, jobEntityParts, summaryEntityPart, queryParameterEntityPart);
 
         // Assert
-        List<PartInfo> expectedPartInfos = List.of(
+        List<Job> expectedPartInfos = List.of(
                 // Case with non-missing type name and missing aspect
-                generateDto.partInfo(partIdsDto.get(1), attributes.get(0).getValue(), null),
+                generateDto.job(jobsDto.get(1), summaryDto, null),
                 // Case with non-missing type name and non-missing aspect
-                generateDto.partInfo(partIdsDto.get(2), attributes.get(1).getValue(), aspectsDto.get(1))
+                generateDto.job(jobsDto.get(2), summaryDto, queryParameterDto)
         );
         assertThat(output).usingRecursiveComparison()
                 .isEqualTo(
-                        (PartRelationshipsWithInfos.builder()
-                                .withRelationships(relationsDto)
-                                .withPartInfos(expectedPartInfos)
+                        (Jobs.builder()
+                                .job(jobsDto.get(1))
+                                .relationships(relationsDto)
+                                .shells(Optional.empty())
                                 .build()));
     }
 
